--- a/app/code/Dss/MicrosoftClarity/view/frontend/templates/script.phtml
+++ b/app/code/Dss/MicrosoftClarity/view/frontend/templates/script.phtml
@@ -18,17 +18,19 @@
 /** @var $escaper \Magento\Framework\Escaper */
 if ($block->isEnabled()):
     $clarityCode = $block->getClarityTrackingCode();
+    $isCustomerGroupTagEnabled = $block->isCustomerGroupTagEnabled();
+    $customerGroup = $block->getCustomerGroup();
     ?>
-    <!-- BEGIN MICROSOFT CLARITY TRACKING CODE -->
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=dss";
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-            <?php if ($block->isCustomerGroupTagEnabled()): ?>
-            c.clarity("set", "customer_group", "<?= $escaper->escapeJs($block->getCustomerGroup()) ?>");
-            <?php endif; ?>
-        })(window, document, "clarity", "script", "<?= $escaper->escapeHtml($clarityCode) ?>");
+    <script type="text/x-magento-init">
+        {
+          "*": {
+              "Dss_MicrosoftClarity/js/clarity": {
+                  "clarityCode": "<?= $escaper->escapeHtml($clarityCode) ?>",
+                  "isCustomerGroupTagEnabled": <?= $isCustomerGroupTagEnabled ? 'true' : 'false' ?>,
+                  "customerGroup": "<?= $escaper->escapeJs($customerGroup) ?>"
+              }
+          }
+        }
     </script>
-    <!-- END MICROSOFT CLARITY TRACKING CODE -->
+<!-- END MICROSOFT CLARITY TRACKING CODE -->
 <?php endif; ?>
